fix: bundle Temurin JRE 25 with QuestDB instead of JRE 21
QuestDB 9.4.x's questdb.sh passes --sun-misc-unsafe-memory-access=allow, a JDK 24+ flag. The three platforms hostdb repackages from the no-jre tarball (darwin-arm64, darwin-x64, linux-arm64) got a bundled Adoptium JRE 21, so the JVM exited with 'Unrecognized option' before QuestDB started. linux-x64 and win32-x64 use QuestDB's own -rt- runtime bundles and were unaffected.

Moves the bundled JRE to the Temurin 25 LTS line. Validated locally on darwin-arm64: the repackaged 9.4.3 tarball boots and answers a query. The 9.4.3 R2 artifacts for the three affected platforms need a re-release, since the JRE is baked in at release time.

Bumps to 0.38.2.